--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ html, body {
     padding: 0;
     /*Margem externa*/
     margin: 0;
+    font-family: Montserrat, sans-serif;
 }
 /**/
 .nav-container {
