--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ html, body {
     /*Largura*/
     width: 100%;
     padding: 20px;
+    /*Fixar o menu ao descer a barra de rolagem*/
+    position: fixed;
 }
 
 .nav-main {
@@ -69,7 +71,7 @@ html, body {
 .profile-container {
     background-color: #1ABC9C;
     color: #fff;
-    padding: 60px 0;
+    padding: 160px 0 60px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,6 +107,7 @@ html, body {
     text-transform: uppercase;
     text-align: center;
     color: #2C3E50;
+    margin: 60px 0 10px 0;
 }
 
 .portfolio-container {
