--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*ELEMENTS*/
+
 * {
     /*Borda e padding será contato como área do elemento(desconta do meio)*/
     box-sizing: border-box;
@@ -10,6 +12,16 @@ html, body {
     margin: 0;
     font-family: Montserrat, sans-serif;
 }
+
+footer {
+    height: 120px;
+    background-color: #2C3E50;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*CLASSES, IDS*/
 
 .nav-container {
     background-color: #2C3E50;
@@ -128,4 +140,16 @@ html, body {
     /*Alterar o curdor para mão ao passar o mouse*/
     cursor: pointer;
     margin: 20px;
+}
+
+.footer-title {
+    color: #fff;
+    font-size: 14px;
+    margin-top: 30px;
+}
+
+.social-container img {
+    width: 32px;
+    height: 32px;
+    margin: 10px;
 }
